frame/support/test/tests/pallet_ui/hooks_invalid_item.stderr
error[E0107]: missing generics for trait `Hooks`
   --> $DIR/hooks_invalid_item.rs:12:18
    |
12  |     impl<T: Config> Hooks for Pallet<T> {}
    |                     ^^^^^ expected 1 type argument
    |
note: trait defined here, with 1 type parameter: `BlockNumber`
   --> $DIR/hooks.rs:214:11
    |
214 | pub trait Hooks<BlockNumber> {
    |           ^^^^^ -----------
help: use angle brackets to add missing type argument
    |
12  |     impl<T: Config> Hooks<BlockNumber> for Pallet<T> {}
    |                          ^^^^^^^^^^^^^
